-Fixed weird terrain issue

--- a/localisation/tamriel_countries_l_english.yml
+++ b/localisation/tamriel_countries_l_english.yml
@@ -134,15 +134,15 @@
  XWR: "Whiterun"
  XWR_ADJ: "Whiterun"
  
- T01: "City Isle"
- T02: "Anvil"
- T03: "Skingrad"
- T04: "Chorrol"
- T05: "Bruma"
- T06: "Cheydinhal"
- T07: "Bravil"
- T08: "Leyawiin"
- T53: "Kvatch"
+ Y01: "City Isle"
+ Y02: "Anvil"
+ Y03: "Skingrad"
+ Y04: "Chorrol"
+ Y05: "Bruma"
+ Y06: "Cheydinhal"
+ Y07: "Bravil"
+ Y08: "Leyawiin"
+ Y53: "Kvatch"
  T09: "Shardrock"
  T10: "Drad"
  T11: "Hackdirt"
@@ -190,15 +190,15 @@
  T54: "Welke"
  T55: "Cyrodiil"
  T56: "Weye"
- T01_ADJ: "City Islander"
- T02_ADJ: "Anvil"
- T03_ADJ: "Skingrad"
- T04_ADJ: "Chorrol"
- T05_ADJ: "Bruma"
- T06_ADJ: "Cheydinhal"
- T07_ADJ: "Bravil"
- T08_ADJ: "Leyawiin"
- T53_ADJ: "Kvatch"
+ Y01_ADJ: "City Islander"
+ Y02_ADJ: "Anvil"
+ Y03_ADJ: "Skingrad"
+ Y04_ADJ: "Chorrol"
+ Y05_ADJ: "Bruma"
+ Y06_ADJ: "Cheydinhal"
+ Y07_ADJ: "Bravil"
+ Y08_ADJ: "Leyawiin"
+ Y53_ADJ: "Kvatch"
  T09_ADJ: "Shardrock"
  T10_ADJ: "Drad"
  T11_ADJ: "Hackdirt"
