--- a/localisation/tamriel_countries_l_english.yml
+++ b/localisation/tamriel_countries_l_english.yml
@@ -17,6 +17,8 @@
  XBM_ADJ: "Boethian"
  XCR: "Corimont"
  XCR_ADJ: "Corimont" 
+ XCW: "Clawreach"
+ XCW_ADJ: "Clawreach"
  XDB: "Dragon Bridge"
  XDB_ADJ: "Dragon Bridge"
  XDR: "Dres"
