--- a/localisation/tamriel_misc_l_english.yml
+++ b/localisation/tamriel_misc_l_english.yml
@@ -40,10 +40,12 @@
  khajiti_g: "Khajiti"
  anequinan: "Anequinan"
  pelletini: "Pelletini"
+ rimmen_c: "Rimmen"
  dwemeri_rg: "Dwarven"
  dwemer_reason: "Dwemer Reason"
  talos: "Talos"
  daedra_worship: "Daedra Worship"
+ lunar_pantheon: "Lunar Pantheon"
  SITHIS: "Sithis"
  azura: "Azura"
  boethiah: "Boethiah"
