--- a/localisation/tamriel_events_l_english.yml
+++ b/localisation/tamriel_events_l_english.yml
@@ -33,7 +33,7 @@
  cyrodiil_flag.EVTDESC2: "This is so behind the scenes stuff works."
  cyrodiil_flag.EVTOPTA2: "Alrighty then"
  cyrodiil_flag.EVTNAME4: "The Ruby Throne is ours!"
- cyrodiil_flag.EVTDESC4: "We have taken the Ruby Throne and our glorious leader $MONARCH$ has been crowned Emperor of Cyrodiil! Now all we need to do is get everyone else to recognize the $DYNASTY$ dynasty's legitimacy."
+ cyrodiil_flag.EVTDESC4: "We have taken the Ruby Throne and our glorious leader $MONARCH$ has been crowned Emperor of Cyrodiil! Now all we need to do is get everyone else to recognize the our legitimacy."
  cyrodiil_flag.EVTOPTA4: "And we shall!"
  cyrodiil_flag.EVTNAME6: "Imperial-County relations"
  cyrodiil_flag.EVTDESC6: "Because our glorious leader $MONARCH$ is sat upon the Ruby Throne, the various counties of Cyrodiil are inclined to be friendly toward us!"
@@ -47,11 +47,11 @@
  cyrodiil_reunify.EVTDESC22: "We have occupied the Imperial City! The Imperial Isle is ours!"
  cyrodiil_reunify.EVTOPTA22: "Excellent!"
  cyrodiil_reunify.EVTNAME23: "Situation Stabilized!"
- cyrodiil_reunify.EVTDESC23: "For many years, the $DYNASTY$ dynasty has remained on the Ruby Throne. After such a long time, perhaps the counties of Cyrodiil may be willing to join $MONARCH$'s legions."
- cyrodiil_reunify.EVTOPTA23: "Let us hope so!"
- cyrodiil_reunify.EVTNAME24: "The [From.Monarch.Dynasty.GetName] dynasty is still in control!"
- cyrodiil_reunify.EVTDESC24: "Many years have passed and the [From.Monarch.Dynasty.GetName] dynasty still remains on the Ruby Throne. Perhaps they are they true heirs of the Empire. Shall we join their legions?"
- cyrodiil_reunify.EVTOPTA24: "Of course!"
+ cyrodiil_reunify.EVTDESC23: "For many years, we have been in control of the Imperial City and the Ruby Throne. We can now finally officially claim to be the true successors to the Cyrodilic Empire!"
+ cyrodiil_reunify.EVTOPTA23: "Cyrodiil shall rise again!"
+ cyrodiil_reunify.EVTNAME24: "An invitation to join the Empire"
+ cyrodiil_reunify.EVTDESC24: "[Y55.Monarch.GetName], the Emperor of Cyrodiil, has formally invited us to join the Empire! Shall we accept?"
+ cyrodiil_reunify.EVTOPTA24: "We accept!"
  cyrodiil_reunify.EVTOPTB24: "Absolutely not!"
  cyrodiil_reunify.EVTNAME25: "$FROMCOUNTRY$ joins the Empire!"
  cyrodiil_reunify.EVTDESC25: "$FROMCOUNTRY$ has agreed to join the empire!"
