--- a/localisation/tamriel_misc_l_english.yml
+++ b/localisation/tamriel_misc_l_english.yml
@@ -37,11 +37,13 @@
  imperial: "Imperial"
  haafingar: "Haafingar"
  south_nordic: "South Nordic"
+ skaal: "Skaal"
  khajiti_g: "Khajiti"
  anequinan: "Anequinan"
  pelletini: "Pelletini"
  rimmen_c: "Rimmen"
  dwemeri_rg: "Dwarven"
+ allmaker: "All-Maker"
  dwemer_reason: "Dwemer Reason"
  talos: "Talos"
  daedra_worship: "Daedra Worship"
