--- a/localisation/tamriel_misc_l_english.yml
+++ b/localisation/tamriel_misc_l_english.yml
@@ -150,3 +150,5 @@
  cb_warlord_expansion: "Warlord Expansion"
  cb_warlord_expansion_desc: "Warlord Expansion"
  daedric_shrine: "Daedric Shrine"
+ TAMRIEL_BOOKMARK: "The Stormcrown Interregnum"
+ TAMRIEL_BOOKMARK_DESC: "Wait, where the hell did Earth go?"
