--- a/localisation/tamriel_countries_l_english.yml
+++ b/localisation/tamriel_countries_l_english.yml
@@ -71,6 +71,8 @@
  XLG_ADJ: "Largash"
  XLI: "Lilmoth"
  XLI_ADJ: "Lilmoth"
+ XMD: "Morrowind"
+ XMD_ADJ: "Morrowind"
  XMK: "Mor Khazgur"
  XMK_ADJ: "Khazguri"
  XMO: "Morokei"
@@ -117,6 +119,8 @@
  XSE_ADJ: "Seydani"
  XSK: "Skaal"
  XSK_ADJ: "Skaal"
+ XSM: "Skyrim"
+ XSM_ADJ: "Skyrim"
  XSP: "Sarpa"
  XSP_ADJ: "Sarpa"
  XSR: "Saranyth"
