--- a/localisation/tamriel_decisions_l_english.yml
+++ b/localisation/tamriel_decisions_l_english.yml
@@ -18,11 +18,17 @@
  form_kvatch_title: "Form Kvatch"
  form_kvatch_desc: "Form the County of Kvatch"
  form_colovia_title: "Form Colovia"
- form_colovia_desc: "Unify the Colovian people of Cyrodiil into one empire!"
+ form_colovia_desc: "Unify the Colovian people of Cyrodiil under one banner!"
  form_nibenay_title: "Form Nibenay"
- form_nibenay_desc: "Unify the Nibenese people of Cyrodiil into one empire!"
+ form_nibenay_desc: "Unify the Nibenese people of Cyrodiil under one banner!"
  unify_cyrodiil_title: "Form Cyrodiil"
  unify_cyrodiil_desc: "Form the Cyrodilic Empire!"
+ form_argonia_title: "Form Argonia"
+ form_argonia_desc: "Unite the Argonians of Black Marsh under one banner!"
+ form_morrowind_title: "Form Morrowind"
+ form_morrowind_desc: "Unite the Dunmer of Morrowind under one banner!"
+ form_skyrim_title: "Form Skyrim"
+ form_skyrim_desc: "Unite the Nords of Skyrim under one banner!"
  unify_cyrodiil_invitation_title: "Unify Cyrodiil"
  unify_cyrodiil_invitation_desc: "Invite the independent counties and republics of Cyrodiil to join our legions!"
  acceptance_conditions_unification: "Countries with relations of +100 or more will join! Empire ranked countries will NOT join! Daedra Worshiping countries will NOT join if we are Nine Divines worshiping and vice versa!"
