--- a/localisation/tamriel_areas_and_regions_l_english.yml
+++ b/localisation/tamriel_areas_and_regions_l_english.yml
@@ -131,3 +131,28 @@
  bravil_region: "Bravil"
  cyrodiil_superregion: "Cyrodiil"
  
+ north_xylo_area: "High Xylo"
+ west_desert_fringe_area: "West Ne Quin'al"
+ dune_area: "Dune"
+ redwall_area: "Redwall"
+ orcrest_area: "Orcrest"
+ riverreach_area: "Riverreach"
+ rimmen_area: "Rim"
+ helkarn_area: "Helkarn Land"
+ ashokhe_area: "Ashokhe"
+ alabaster_area: "Alabaster"
+ corinthe_area: "Corinthe"
+ anequina_region: "Anequina"
+ ahjdawi_area: "Ahjdawi"
+ quinrawl_area: "Quin'rawl"
+ inner_pelletine_area: "Inner Pellitine"
+ colossus_halls_area: "Colossus Land"
+ redbridge_area: "Redbridge"
+ torval_area: "Torvalia"
+ hasanir_area: "Hasanir"
+ rivermouth_area: "Mid Xylo"
+ ahkhai_area: "Ahkhai"
+ low_xylo_area: "Low Xylo"
+ pelletine_region: "Pellitine"
+ elsweyr_superregion: "Elsweyr"
+ 
