--- a/localisation/tamriel_areas_and_regions_names_l_english.yml
+++ b/localisation/tamriel_areas_and_regions_names_l_english.yml
@@ -131,3 +131,28 @@
  bravil_region_name: "Bravil"
  cyrodiil_superregion_name: "Cyrodiil"
  
+ north_xylo_area_name: "Upper Xylo"
+ west_desert_fringe_area_name: "West Ne Quin'al"
+ dune_area_name: "Dune"
+ redwall_area_name: "Redwall"
+ orcrest_area_name: "Orcrest"
+ riverreach_area_name: "Riverreach"
+ rimmen_area_name: "Rim"
+ helkarn_area_name: "Helkarn Land"
+ ashokhe_area_name: "Ashokhe"
+ alabaster_area_name: "Alabaster"
+ corinthe_area_name: "Corinthe"
+ anequina_region_name: "Anequina"
+ ahjdawi_area_name: "Ahjdawi"
+ quinrawl_area_name: "Quin'rawl"
+ inner_pelletine_area_name: "Inner Pellitine"
+ colossus_halls_area_name: "Colossus Land"
+ redbridge_area_name: "Redbridge"
+ torval_area_name: "Torvalia"
+ hasanir_area_name: "Hasanir"
+ rivermouth_area_name: "Mid Xylo"
+ ahkhai_area_name: "Ahkhai"
+ low_xylo_area_name: "Low Xylo"
+ pelletine_region_name: "Pellitine"
+ elsweyr_superregion_name: "Elsweyr"
+ 
