--- a/localisation/tamriel_prov_names_l_english.yml
+++ b/localisation/tamriel_prov_names_l_english.yml
@@ -58,8 +58,8 @@
  PROV3082: "Hla Bulor"
  PROV3083: "Sadratus"
  PROV3084: "Oren"
- PROV3085: "The Library"
- PROV3086: "Narrusa"
+ PROV3085: "Assurbalhet"
+ PROV3086: "Mzankh"
  PROV3087: "Helnim"
  PROV3088: "West Boethiah"
  PROV3089: "Baldrahn"
@@ -96,7 +96,7 @@
  PROV3120: "Nushiu"
  PROV3121: "Trandell"
  PROV3122: "Anaguma"
- PROV3123: "Hlaalon"
+ PROV3123: "Oran"
  PROV3124: "Huzimoth"
  PROV3125: "Vorari"
  PROV3126: "Karthor"
@@ -113,7 +113,7 @@
  PROV3137: "Silgrad"
  PROV3138: "South Hidoran"
  PROV3139: "Onwaki"
- PROV3140: "Scinia"
+ PROV3140: "Ngelftingth"
  PROV3141: "Moriten"
  PROV3142: "Morimath"
  PROV3143: "Raven Rock"
@@ -126,8 +126,8 @@
  PROV3150: "Kogo Tel"
  PROV3151: "Latrys"
  PROV3152: "Verarchen"
- PROV3153: "Septim's Gate"
- PROV3154: "Tayn"
+ PROV3153: "Virak"
+ PROV3154: "Zaelbalmiran"
  PROV3155: "Old Karthor"
  PROV3156: "Soluthis"
  PROV3157: "Baan Malur"
@@ -141,8 +141,8 @@
  PROV3165: "Coronaci"
  PROV3166: "Valosei"
  PROV3167: "Kragen"
- PROV3168: "Shargon"
- PROV3169: "Othreleth"
+ PROV3168: "Hlan Oek"
+ PROV3169: "Ithesi"
  PROV3170: "Jerxhun"
  PROV3171: "South Thorn"
  PROV3172: "Alten"
@@ -218,10 +218,10 @@
  PROV3242: "Deepscorn"
  PROV3243: "Blueblood"
  PROV3244: "Teruma"
- PROV3245: "Kynok Nakr"
- PROV3246: "Outer Tolvald"
+ PROV3245: "Kushimmu"
+ PROV3246: "Kuhn Mar"
  PROV3247: "Yngol"
- PROV3248: "Veloth's End"
+ PROV3248: "Hjolfrstad"
  PROV3249: "Windhelm"
  PROV3250: "Kynesgrove"
  PROV3251: "Narzulbur"
@@ -652,6 +652,34 @@
  PROV3676: "Ansilvund"
  PROV3677: "Guldun"
  PROV3678: "Fellglow"
+ PROV3679: "Halaran"
+ PROV3680: "Yashazmus"
+ PROV3681: "Baelkashpitu"
+ PROV3682: "Tansumiran"
+ PROV3683: "Amthuandz"
+ PROV3684: "Menaan"
+ PROV3685: "Othmura"
+ PROV3686: "Uneyn"
+ PROV3687: "Shadowgate"
+ PROV3688: "South Valus"
+ PROV3689: "Iliath"
+ PROV3690: "Gargen Huul"
+ PROV3691: "Ystralond"
+ PROV3692: "Dunkreath"
+ PROV3693: "Askareth"
+ PROV3694: "Redman Niben"
+ PROV3695: "Lake Silgrad"
+ PROV3696: "Dagoth Caldera"
+ PROV3697: "Lake Hairan"
+ PROV3698: "Lake Nabia"
+ PROV3699: "Lake Amaya"
+ PROV3700: "Karzai Lake"
+ PROV3701: "Bashipal"
+ PROV3702: "Southern Quin'rawl Sea"
+ PROV3703: "Southwestern Quin'rawl Sea"
+ PROV3704: "Colossus Sea"
+ PROV3705: "Redbridge Coast"
+ PROV3706: "Mouth of the Xylo"
  PROV_ADJ3026: "Tamriel"
  PROV_ADJ3027: "Far Sheogorad"
  PROV_ADJ3028: "Ald Daedroth"
@@ -711,8 +739,8 @@
  PROV_ADJ3082: "Hla Bulor"
  PROV_ADJ3083: "Sadratus"
  PROV_ADJ3084: "Oren"
- PROV_ADJ3085: "The Library"
- PROV_ADJ3086: "Narrusa"
+ PROV_ADJ3085: "Assurbalhet"
+ PROV_ADJ3086: "Mzankh"
  PROV_ADJ3087: "Helnim"
  PROV_ADJ3088: "West Boethiah"
  PROV_ADJ3089: "Baldrahn"
@@ -749,7 +777,7 @@
  PROV_ADJ3120: "Nushiu"
  PROV_ADJ3121: "Trandell"
  PROV_ADJ3122: "Anaguma"
- PROV_ADJ3123: "Hlaalon"
+ PROV_ADJ3123: "Oran"
  PROV_ADJ3124: "Huzimoth"
  PROV_ADJ3125: "Vorari"
  PROV_ADJ3126: "Karthor"
@@ -766,7 +794,7 @@
  PROV_ADJ3137: "Silgrad"
  PROV_ADJ3138: "South Hidoran"
  PROV_ADJ3139: "Onwaki"
- PROV_ADJ3140: "Scinia"
+ PROV_ADJ3140: "Ngelftingth"
  PROV_ADJ3141: "Moriten"
  PROV_ADJ3142: "Morimath"
  PROV_ADJ3143: "Raven Rock"
@@ -779,8 +807,8 @@
  PROV_ADJ3150: "Kogo Tel"
  PROV_ADJ3151: "Latrys"
  PROV_ADJ3152: "Verarchen"
- PROV_ADJ3153: "Septim's Gate"
- PROV_ADJ3154: "Tayn"
+ PROV_ADJ3153: "Virak"
+ PROV_ADJ3154: "Zaelbalmiran"
  PROV_ADJ3155: "Old Karthor"
  PROV_ADJ3156: "Soluthis"
  PROV_ADJ3157: "Baan Malur"
@@ -794,8 +822,8 @@
  PROV_ADJ3165: "Coronaci"
  PROV_ADJ3166: "Valosei"
  PROV_ADJ3167: "Kragen"
- PROV_ADJ3168: "Shargon"
- PROV_ADJ3169: "Othreleth"
+ PROV_ADJ3168: "Hlan Oek"
+ PROV_ADJ3169: "Ithesi"
  PROV_ADJ3170: "Jerxhun"
  PROV_ADJ3171: "South Thorn"
  PROV_ADJ3172: "Alten"
@@ -871,10 +899,10 @@
  PROV_ADJ3242: "Deepscorn"
  PROV_ADJ3243: "Blueblood"
  PROV_ADJ3244: "Teruma"
- PROV_ADJ3245: "Kynok Nakr"
- PROV_ADJ3246: "Outer Tolvald"
+ PROV_ADJ3245: "Kushimmu"
+ PROV_ADJ3246: "Kuhn Mar"
  PROV_ADJ3247: "Yngol"
- PROV_ADJ3248: "Veloth's End"
+ PROV_ADJ3248: "Hjolfrstad"
  PROV_ADJ3249: "Windhelm"
  PROV_ADJ3250: "Kynesgrove"
  PROV_ADJ3251: "Narzulbur"
@@ -1305,4 +1333,32 @@
  PROV_ADJ3676: "Ansilvund"
  PROV_ADJ3677: "Guldun"
  PROV_ADJ3678: "Fellglow"
+ PROV_ADJ3679: "Halaran"
+ PROV_ADJ3680: "Yashazmus"
+ PROV_ADJ3681: "Baelkashpitu"
+ PROV_ADJ3682: "Tansumiran"
+ PROV_ADJ3683: "Amthuandz"
+ PROV_ADJ3684: "Menaan"
+ PROV_ADJ3685: "Othmura"
+ PROV_ADJ3686: "Uneyn"
+ PROV_ADJ3687: "Shadowgate"
+ PROV_ADJ3688: "South Valus"
+ PROV_ADJ3689: "Iliath"
+ PROV_ADJ3690: "Gargen Huul"
+ PROV_ADJ3691: "Ystralond"
+ PROV_ADJ3692: "Dunkreath"
+ PROV_ADJ3693: "Askareth"
+ PROV_ADJ3694: "Redman Niben"
+ PROV_ADJ3695: "Lake Silgrad"
+ PROV_ADJ3696: "Dagoth Caldera"
+ PROV_ADJ3697: "Lake Hairan"
+ PROV_ADJ3698: "Lake Nabia"
+ PROV_ADJ3699: "Lake Amaya"
+ PROV_ADJ3700: "Karzai Lake"
+ PROV_ADJ3701: "Bashipal"
+ PROV_ADJ3702: "Southern Quin'rawl Sea"
+ PROV_ADJ3703: "Southwestern Quin'rawl Sea"
+ PROV_ADJ3704: "Colossus Sea"
+ PROV_ADJ3705: "Redbridge Coast"
+ PROV_ADJ3706: "Mouth of the Xylo"
  
