More Elsweyr Changes!
-Added cores for more Elsweyr breakaway states
-Adjusted Elsweyr culture groups
-Slight Elsweyr government nerf
-Formables for Anequina, Pellitine, and Elsweyr
-Adjusted areas/regions in Elsweyr
-Adjusted areas/regions in Cyrodiil
-Removed "We gained X county" events for the Emperor of Cyrodiil

--- a/localisation/tamriel_areas_and_regions_l_english.yml
+++ b/localisation/tamriel_areas_and_regions_l_english.yml
@@ -92,13 +92,12 @@
  n_goldcoast_area: "North Gold Coast"
  w_colovian_highlands_area: "Colovian Highlands"
  kvatch_area: "Kvatch"
- shardrock_area: "Shardrock"
  chorrol_area: "Chorrol"
  w_jeralls_area: "West Jeralls"
- glademist_area: "Glademist"
+ odiil_area: "Odiil"
  hackdirt_area: "Hackdirt"
- e_jeralls_area: "East Jeralls"
- bleakers_way_area: "Bleaker's Way"
+ e_jeralls_area: "Bruma"
+ bleakers_way_area: "Applewatch"
  cheydinhal_area: "Cheydinhal"
  n_valus_area: "North Valus"
  hame_area: "Hame"
@@ -111,28 +110,27 @@
  altar_valley_area: "Altar Valley"
  skingrad_area: "Skingrad"
  valen_border_area: "Valenwood-Elseweyr Border"
- nornalhorst_area: "Nornalhorst"
+ nornalhorst_area: "West Weald"
  city_isle_area: "City Isle"
  weye_area: "Weye"
  e_heartlands_area: "East Heartlands"
  n_heartlands_area: "North Heartlands"
  pells_gate_area: "Pell's Gate"
  alessia_area: "Alessia"
- w_niben_area: "West Niben Valley"
- e_niben_area: "East Niben Valley"
- anvil_region: "Anvil"
- kvatch_region: "Kvatch"
- chorrol_region: "Chorrol"
- bruma_region: "Bruma"
- cheydinhal_region: "Cheydinhal"
- leyawiin_region: "Leyawiin"
- skingrad_region: "Skingrad"
- heartlands_region: "Heartlands"
- bravil_region: "Bravil"
+ w_niben_area: "Bravil"
+ e_niben_area: "East Niben Bay"
+ wendelbek_area: "Wendelbek"
+ sedor_area: "Sedor"
+ brindle_area: "Brindle"
+ heartlands_region: "Imperial Heartlands"
+ colovian_highlands_region: "Colovian Highlands"
+ colovian_heartlands_region: "Colovian Heartlands"
+ n_nibenay_region: "North Nibenay"
+ s_nibenay_region: "South Nibenay"
  cyrodiil_superregion: "Cyrodiil"
  
  anequina_region: "Anequina"
- pelletine_region: "Pelletine"
+ pellitine_region: "Pellitine"
  elsweyr_superregion: "Elsweyr"
  alabaster_area: "Alabaster"
  corinthe_area: "Corinthe"
@@ -147,8 +145,8 @@
  lower_xylo_area: "Lower Xylo"
  quinrawl_area: "Quin'rawl"
  ahjdawi_area: "Ahjdawi"
- inner_pelletine_area: "Inner Pelletine"
- southsea_area: "Southsea"
+ inner_pelletine_area: "Inner Pellitine"
+ southsea_area: "Markgran"
  duncori_area: "Duncori"
  tenmar_area: "Tenmar"
  ahkhai_area: "Ahkhai"
