--- a/localisation/tamriel_countries_l_english.yml
+++ b/localisation/tamriel_countries_l_english.yml
@@ -202,7 +202,7 @@
  Y57: "Colovia"
  Y58: "Nibenay"
  YAL: "Alabaster"
- YAK: "Ahkhai"
+ YAH: "Ahkhai"
  YCO: "Corinth"
  YDC: "Duncori"
  YDN: "Dune"
@@ -217,6 +217,10 @@
  YTO: "Torval"
  YVG: "Valley Guard"
  YXS: "Xaspor"
+ YDV: "Darvulk"
+ YMK: "Markgran"
+ YAQ: "Nequin'al"
+ YPT: "Pa'alatiin"
  Y01_ADJ: "City Islander"
  Y02_ADJ: "Anvil"
  Y03_ADJ: "Skingrad"
@@ -276,7 +280,7 @@
  Y57_ADJ: "Colovian"
  Y58_ADJ: "Nibenese"
  YAL_ADJ: "Alabasterian"
- YAK_ADJ: "Ahkhain"
+ YAH_ADJ: "Ahkhain"
  YCO_ADJ: "Corinthian"
  YDC_ADJ: "Duncorian"
  YDN_ADJ: "Dunian"
@@ -291,3 +295,7 @@
  YTO_ADJ: "Torvalian"
  YVG_ADJ: "Valley Guardian"
  YXS_ADJ: "Xasporian"
+ YDV_ADJ: "Darvulker"
+ YMK_ADJ: "Markgranian"
+ YAQ_ADJ: "Nequin'ali"
+ YPT_ADJ: "Pa'alatiini"
