--- a/localisation/tamriel_decisions_l_english.yml
+++ b/localisation/tamriel_decisions_l_english.yml
@@ -31,6 +31,12 @@
  form_resdayn_desc: "Revive the dead Dwemer nation of Resdayn!"
  form_skyrim_title: "Form Skyrim"
  form_skyrim_desc: "Unite the Nords of Skyrim under one banner!"
+ form_pellitine_title: "Form Pa'alatiin"
+ form_pellitine_desc: "Unite the Pa'alatini Khajiit of Elsweyr under one banner!"
+ form_anequina_title: "Form Nequin'al"
+ form_anequina_desc: "Unite the Nequin'ali Khajiit of Elsweyr under one banner!"
+ form_elsweyr_title: "Form Elswer"
+ form_elsweyr_desc: "Unite the Khajiit of Elswer under one banner!"
  unify_cyrodiil_invitation_title: "Unify Cyrodiil"
  unify_cyrodiil_invitation_desc: "Invite the independent counties and republics of Cyrodiil to join our legions!"
  acceptance_conditions_unification: "Countries with relations of +100 or more will join! Empire ranked countries will NOT join! Daedra Worshiping countries will NOT join if we are Nine Divines worshiping and vice versa!"
