--- a/localisation/tamriel_misc_l_english.yml
+++ b/localisation/tamriel_misc_l_english.yml
@@ -60,6 +60,7 @@
  talos: "Talos"
  daedra_worship: "Daedra Worship"
  lunar_pantheon: "Lunar Pantheon"
+ akaviri: "Akaviri"
  SITHIS: "Sithis"
  azura: "Azura"
  boethiah: "Boethiah"
