--- a/localisation/tamriel_areas_and_regions_l_english.yml
+++ b/localisation/tamriel_areas_and_regions_l_english.yml
@@ -6,21 +6,25 @@
  aranyon_area: "Aranyon"
  lake_boethiah_area: "Boethian Shore"
  west_boethiah_area: "West Boethiah"
+ oren_boethiah_area: "Orendo"
  telvannis_region: "Telvannis"
  sacred_lands_area: "Sacred Lands"
  spine_of_nezuad_area: "Spine of Nezuad"
  akasunde_area: "Akasund"
+ inlet_bog_area: "Inlet Bog"
  orethan_area: "Orethan"
  daimon_coast_area: "Retothril"
  almalexia_area: "Almalexia"
- kanadesit_area: "Kanadesit"
- east_thirr_area: "East Thirr"
+ kanadesit_area: "Jagdak Bay"
+ east_thirr_area: "East Aanthirin"
  indoril_region: "Indorith"
  jer_ahkrin_area: "Jer Ahkrin"
+ kalen_area: "Kogo Kalen"
  uvonaak_area: "Uvonaak"
+ shargon_othreleth_area: "Shargon-Othreleth"
  kragenmoor_area: "Kragen Valus"
  south_morrowind_region: "Argonian Borders"
- west_thirr_area: "West Thirr"
+ west_thirr_area: "West Aanthirin"
  roth_roryn_area: "Roth Roryn"
  armun_area: "Armun"
  morimath_area: "Morimath"
@@ -28,7 +32,7 @@
  coastal_indar_area: "Coastal Indar"
  mid_veloth_area: "Mid Veloth"
  redoran_area: "Baan Malur"
- kagrenzel_area: "Kagrenzel"
+ kagrenzel_area: "Veloth's End"
  veloth_region: "Veloth"
  bitter_coast_area: "Bitter Coast"
  ascadia_area: "Ascadia"
@@ -42,38 +46,45 @@
  north_ashlands_area: "West Ashlands"
  vvardenfell_region: "Vvardenfell"
  morrowind_superregion: "Morrowind"
- north_seydahnil_area: "North Seydahnil"
- south_seydahnil_area: "South Seydahnil"
+ north_seydahnil_area: "Gideon"
+ south_seydahnil_area: "Onkobra"
+ foxfire_area: "Foxfire-Topal"
+ dacyn_road_area: "Dacyn Road"
  darkmoor_area: "Darkmoor"
  axadnia_area: "Axadnia"
  kulania_area: "Kulania"
  kynokhia_region: "Kynokhia"
  kamanai_area: "Kamanai"
  ok_nanha_area: "Ok-Nanha"
+ argon_border_area: "Markhalt Border"
  clawreach_area: "Clawreach"
  karanake_area: "Karanake"
  north_hjalokh_area: "Paatru-Agaceph"
- lake_hjalokh_area: "Hjalok Lakes"
+ lake_hjalokh_area: "Ojomaug"
  sikiha_area: "Sikiha"
  argonian_wastelands_area: "Murkwood-Talu"
  karanakh_region: "Deep Argonia"
  arnesia_area: "Arnesia"
  north_atronium_area: "Wamasus-Reaven"
+ north_cimuthrai_area: "North Cimuthrai"
  xi_helai_area: "Xivilai"
  klamabe_area: "Klamabe"
+ engan_area: "Enganzu"
  firewalk_area: "Firewalk"
  atron_region: "Atronia"
  argonia_superregion: "Argonia"
- kagrenzel_area: "Kagrenzel"
+ kagrenzel_area: "Veloth's End"
+ tolvald_area: "Tolvalde"
  eastmarch_volcanic_area: "Eastmarch"
  eastmarch_river_area: "White Eastmarch"
- whiterun_area: "Whiterun"
+ whiterun_area: "White Valley"
  yorgrim_area: "Yorgrim"
  winterhold_area: "Winterhold"
  north_pale_area: "North Pale"
  old_skyrim_region: "Old Skyrim"
- north_falkreath_area: "North Falkreath"
+ north_falkreath_area: "Riverwood"
  south_falkreath_area: "South Falkreath"
+ sungard_area: "Sungard"
  skyrim_jeralls_area: "Skyrim Jeralls"
  north_rift_area: "North Rift"
  south_rift_area: "South Rift"
@@ -81,7 +92,9 @@
  south_skyrim_region: "South Skyrim"
  rorikstead_area: "Rorikstead"
  hjaalmarch_area: "Hjaalmarch"
+ skyborn_area: "Skyborn Range"
  east_haafingar_area: "East Haafingar"
+ mid_haafingar_area: "Mid Haafingar"
  west_haafingar_area: "West Haafingar"
  markarth_area: "Markarth"
  karthwasten_area: "Karthwasten"
