--- a/localisation/tamriel_prov_names_l_english.yml
+++ b/localisation/tamriel_prov_names_l_english.yml
@@ -151,7 +151,7 @@
  PROV3175: "Naga Cradle"
  PROV3176: "Tenmar Wall"
  PROV3177: "Anazukh"
- PROV3178: "Shadowfen"
+ PROV3178: "Glokchuba"
  PROV3179: "Kamanai"
  PROV3180: "Hixinoag"
  PROV3181: "Sundercliff"
@@ -168,8 +168,8 @@
  PROV3192: "Martti"
  PROV3193: "Nieleon"
  PROV3194: "Narima"
- PROV3195: "Karanakh Genkan"
- PROV3196: "Greenspring"
+ PROV3195: "Karan Genkan"
+ PROV3196: "Ossasoit"
  PROV3197: "Doraku"
  PROV3198: "Akashie"
  PROV3199: "Nakar"
@@ -200,10 +200,10 @@
  PROV3224: "Tul'xche"
  PROV3225: "Okeen-Re"
  PROV3226: "Darkmoor"
- PROV3227: "Stonewastes"
+ PROV3227: "Ku T'gasi"
  PROV3228: "Kynok"
  PROV3229: "Foxfyrn"
- PROV3230: "Rockgrove"
+ PROV3230: "Bakkunmau"
  PROV3231: "Maradra"
  PROV3232: "Soulrest"
  PROV3233: "Sheoth Coast"
@@ -832,7 +832,7 @@
  PROV_ADJ3175: "Naga Cradle"
  PROV_ADJ3176: "Tenmar Wall"
  PROV_ADJ3177: "Anazukh"
- PROV_ADJ3178: "Shadowfen"
+ PROV_ADJ3178: "Glokchuba"
  PROV_ADJ3179: "Kamanai"
  PROV_ADJ3180: "Hixinoag"
  PROV_ADJ3181: "Sundercliff"
@@ -849,8 +849,8 @@
  PROV_ADJ3192: "Martti"
  PROV_ADJ3193: "Nieleon"
  PROV_ADJ3194: "Narima"
- PROV_ADJ3195: "Karanakh Genkan"
- PROV_ADJ3196: "Greenspring"
+ PROV_ADJ3195: "Karan Genkan"
+ PROV_ADJ3196: "Ossasoit"
  PROV_ADJ3197: "Doraku"
  PROV_ADJ3198: "Akashie"
  PROV_ADJ3199: "Nakar"
@@ -881,10 +881,10 @@
  PROV_ADJ3224: "Tul'xche"
  PROV_ADJ3225: "Okeen-Re"
  PROV_ADJ3226: "Darkmoor"
- PROV_ADJ3227: "Stonewastes"
+ PROV_ADJ3227: "Ku T'gasi"
  PROV_ADJ3228: "Kynok"
  PROV_ADJ3229: "Foxfyrn"
- PROV_ADJ3230: "Rockgrove"
+ PROV_ADJ3230: "Bakkunmau"
  PROV_ADJ3231: "Maradra"
  PROV_ADJ3232: "Soulrest"
  PROV_ADJ3233: "Sheoth Coast"
