--- a/localisation/tamriel_countries_l_english.yml
+++ b/localisation/tamriel_countries_l_english.yml
@@ -221,6 +221,10 @@
  YMK: "Markgran"
  YAQ: "Nequin'al"
  YPT: "Pa'alatiin"
+ YUR: "Urshilaku"
+ YAE: "Ahemmusa"
+ YZN: "Zainab"
+ YER: "Erabenimsun"
  Y01_ADJ: "City Islander"
  Y02_ADJ: "Anvil"
  Y03_ADJ: "Skingrad"
@@ -299,3 +303,7 @@
  YMK_ADJ: "Markgranian"
  YAQ_ADJ: "Nequin'ali"
  YPT_ADJ: "Pa'alatiini"
+ YUR_ADJ: "Urshilaku"
+ YAE_ADJ: "Ahemmusa"
+ YZN_ADJ: "Zainab"
+ YER_ADJ: "Erabenimsun"
