--- a/localisation/tamriel_misc_l_english.yml
+++ b/localisation/tamriel_misc_l_english.yml
@@ -54,6 +54,11 @@
  tenmari: "Tenmari"
  quinrawli: "Quin'rawli"
  rimmen_c: "Rimmen"
+ ashlander_dunmeri: "Ashlander Dunmeri"
+ urshilaku: "Urshilaku"
+ ahemmusa: "Ahemmusa"
+ zainab: "Zainab"
+ erabenimsun: "Erabenimsun"
  dwemeri_rg: "Dwarven"
  allmaker: "All-Maker"
  dwemer_reason: "Dwemer Reason"
