--- a/localisation/tamriel_prov_names_l_english.yml
+++ b/localisation/tamriel_prov_names_l_english.yml
@@ -9,12 +9,12 @@
  PROV3033: "Zergonipal"
  PROV3034: "Ahemmusa"
  PROV3035: "Vos"
- PROV3036: "Nchuleft"
+ PROV3036: "Zainab"
  PROV3037: "Indoranyon"
  PROV3038: "Aruhn"
  PROV3039: "Sadrith Mora"
  PROV3040: "Mzanchend"
- PROV3041: "Uvirith's Grave"
+ PROV3041: "Erabenimsun"
  PROV3042: "Azura"
  PROV3043: "Dagoth Ur"
  PROV3044: "Molag Amur"
