Trade and more!
-Finally got around to completing the trade nodes and trade routes of
Tamriel (so far at least)

-Improved Cyrodilic Unification (I'll get it the way I want eventually!)

-Leyawiin has Borderwatch and Water's Edge as vassals

-Akasude-Jer Ahkrin / Akasunde-Kanadesit Alliance

-Slight positions adjustments

--- a/localisation/tamriel_misc_l_english.yml
+++ b/localisation/tamriel_misc_l_english.yml
@@ -169,6 +169,10 @@
  anvil_t: "Anvil"
  skingrad_t: "Skingrad"
  chorrol_t: "Chorrol"
+ senchal_t: "Senchal"
+ alabaster_t: "Alabaster"
+ torval_t: "Torval"
+ riverhold_t: "Riverhold"
  cb_warlord_expansion: "Warlord Expansion"
  cb_warlord_expansion_desc: "Warlord Expansion"
  daedric_shrine: "Daedric Shrine"
