--- a/localisation/tamriel_decisions_l_english.yml
+++ b/localisation/tamriel_decisions_l_english.yml
@@ -39,4 +39,6 @@
  form_elsweyr_desc: "Unite the Khajiit of Elswer under one banner!"
  unify_cyrodiil_invitation_title: "Unify Cyrodiil"
  unify_cyrodiil_invitation_desc: "Invite the independent counties and republics of Cyrodiil to join our legions!"
+ join_the_empire_title: "Join the Empire"
+ join_the_empire_desc: "The Empire of Cyrodiil has been reborn. Shall we join their legions?"
  acceptance_conditions_unification: "Countries with relations of +100 or more will join! Empire ranked countries will NOT join! Daedra Worshiping countries will NOT join if we are Nine Divines worshiping and vice versa!"
