--- a/localisation/tamriel_areas_and_regions_l_english.yml
+++ b/localisation/tamriel_areas_and_regions_l_english.yml
@@ -66,7 +66,7 @@
  karanakh_region: "Deep Argonia"
  arnesia_area: "Arnesia"
  north_atronium_area: "Wamasus-Reaven"
- north_cimuthrai_area: "North Cimuthrai"
+ north_cimuthrai_area: "Cimuthrai-Nieleon"
  xi_helai_area: "Xivilai"
  klamabe_area: "Klamabe"
  engan_area: "Enganzu"
@@ -119,6 +119,7 @@
  borderwatch_area: "Borderwatch"
  topal_bay_area: "Topal Bay"
  blackwood_area: "Blackwood"
+ atatar_area: "Ayleid Paths"
  s_valus_area: "South Valus"
  altar_valley_area: "Altar Valley"
  skingrad_area: "Skingrad"
