--- a/localisation/tamriel_areas_and_regions_names_l_english.yml
+++ b/localisation/tamriel_areas_and_regions_names_l_english.yml
@@ -119,6 +119,7 @@
  borderwatch_area_name: "Borderwatch"
  topal_bay_area_name: "Topal Bay"
  blackwood_area_name: "Blackwood"
+ atatar_area_name: "Ayleid Paths"
  s_valus_area_name: "South Valus"
  altar_valley_area_name: "Altar Valley"
  skingrad_area_name: "Skingrad"
