--- a/localisation/tamriel_prov_names_l_english.yml
+++ b/localisation/tamriel_prov_names_l_english.yml
@@ -161,14 +161,14 @@
  PROV3185: "Bosojul"
  PROV3186: "Helstrom"
  PROV3187: "Southern Murkwood"
- PROV3188: "Atron Genkan"
+ PROV3188: "Atronganka"
  PROV3189: "Thormir"
  PROV3190: "Reaven"
  PROV3191: "Vanyal"
  PROV3192: "Martti"
- PROV3193: "Nieleon"
+ PROV3193: "South Nieleon"
  PROV3194: "Narima"
- PROV3195: "Karan Genkan"
+ PROV3195: "Karanganka"
  PROV3196: "Ossasoit"
  PROV3197: "Doraku"
  PROV3198: "Akashie"
@@ -213,8 +213,8 @@
  PROV3237: "Glenbridge"
  PROV3238: "Gideon"
  PROV3239: "Kixtuku"
- PROV3240: "Onyxe"
- PROV3241: "Bulwark"
+ PROV3240: "Xidyasoto"
+ PROV3241: "Onyxe"
  PROV3242: "Deepscorn"
  PROV3243: "Blueblood"
  PROV3244: "Teruma"
@@ -321,9 +321,9 @@
  PROV3345: "West Leyawiin"
  PROV3346: "Telepe"
  PROV3347: "Water's Edge"
- PROV3348: "Sheggor"
+ PROV3348: "Sheogor"
  PROV3349: "Nomore"
- PROV3350: "Irony"
+ PROV3350: "Bawn"
  PROV3351: "Arentor"
  PROV3352: "High Valus"
  PROV3353: "North Valus"
@@ -680,6 +680,15 @@
  PROV3704: "Colossus Sea"
  PROV3705: "Redbridge Coast"
  PROV3706: "Mouth of the Xylo"
+ PROV3707: "Mulum"
+ PROV3708: "Markmont"
+ PROV3709: "Xthala"
+ PROV3710: "North Nieleon"
+ PROV3711: "K'tsruma"
+ PROV3712: "Ksefrod"
+ PROV3713: "Bulwark"
+ PROV3714: "Blankenmarch"
+ PROV3715: "Border Watch"
  PROV_ADJ3026: "Tamriel"
  PROV_ADJ3027: "Far Sheogorad"
  PROV_ADJ3028: "Ald Daedroth"
