--- a/localisation/tamriel_countries_l_english.yml
+++ b/localisation/tamriel_countries_l_english.yml
@@ -57,6 +57,8 @@
  XJA_ADJ: "Ahkrinese"
  XKD: "Kanadesit"
  XKD_ADJ: "Kanadesit"
+ XKF: "Ksefrod"
+ XKF_ADJ: "Ksefrod"
  XKG: "Kagrenzel"
  XKG_ADJ: "Kagrenzeli"
  XKL: "Kulan"
@@ -201,6 +203,7 @@
  Y56: "Weye"
  Y57: "Colovia"
  Y58: "Nibenay"
+ Y59: "Blankenmarch"
  YAL: "Alabaster"
  YAH: "Ahkhai"
  YCO: "Corinth"
@@ -283,6 +286,7 @@
  Y56_ADJ: "Weye"
  Y57_ADJ: "Colovian"
  Y58_ADJ: "Nibenese"
+ Y59_ADJ: "Blankenmarch"
  YAL_ADJ: "Alabasterian"
  YAH_ADJ: "Ahkhain"
  YCO_ADJ: "Corinthian"
