--- a/localisation/tamriel_countries_l_english.yml
+++ b/localisation/tamriel_countries_l_english.yml
@@ -187,7 +187,7 @@
  Y39: "Sercen"
  Y40: "Nikel"
  Y41: "Cedrian"
- Y42: "Mackamentian"
+ Y42: "Mackamentain"
  Y43: "Naso"
  Y44: "Hame"
  Y45: "Entius"
@@ -270,7 +270,7 @@
  Y39_ADJ: "Sercen"
  Y40_ADJ: "Nikel"
  Y41_ADJ: "Cedrian"
- Y42_ADJ: "Mackamentian"
+ Y42_ADJ: "Mackamentain"
  Y43_ADJ: "Naso"
  Y44_ADJ: "Hame"
  Y45_ADJ: "Entius"
