--- a/localisation/tamriel_events_l_english.yml
+++ b/localisation/tamriel_events_l_english.yml
@@ -69,3 +69,9 @@
  cyrodiil_religion.EVTNAME1: "People Turn to Daedra Worship"
  cyrodiil_religion.EVTDESC1: "The people in one of our provinces are now worshiping Daedra"
  cyrodiil_religion.EVTOPTA: "An interesting development"
+ voidnights.EVTNAME1: "The Void Nights"
+ voidnights.EVTDESC1: "The Moons Masser and Secunda have mysteriously disappeared from the night sky! At this time, we are unsure if this is merely an illusion or something more sinister. Regardless, this has understandably upset a large amount of the population, especially the Khajiit."
+ voidnights.EVTOPTA1: "Hopefully this isn't permanent!"
+ voidnights.EVTNAME2: "End Of The Void Nights"
+ voidnights.EVTDESC2: "The Moons Masser and Secunda have reappeared in the night sky! The Thalmor of Alinor have taken responsibility for the moons' reppearance, claiming to have leveraged previously undiscovered Dawn Magicks. Regardless of whether their claims are true or not, it's comforting to see the pair in the sky once again."
+ voidnights.EVTOPTA2: "What a relief!"
