Almalexia Restoration decision and formable House Indoril
^^^^

--- a/localisation/tamriel_countries_l_english.yml
+++ b/localisation/tamriel_countries_l_english.yml
@@ -228,6 +228,7 @@
  YAE: "Ahemmusa"
  YZN: "Zainab"
  YER: "Erabenimsun"
+ XID: "Indoril"
  Y01_ADJ: "City Islander"
  Y02_ADJ: "Anvil"
  Y03_ADJ: "Skingrad"
@@ -311,3 +312,4 @@
  YAE_ADJ: "Ahemmusa"
  YZN_ADJ: "Zainab"
  YER_ADJ: "Erabenimsun"
+ XID_ADJ: "Indoril"
