--- a/localisation/tamriel_events_l_english.yml
+++ b/localisation/tamriel_events_l_english.yml
@@ -75,3 +75,6 @@
  voidnights.EVTNAME2: "End Of The Void Nights"
  voidnights.EVTDESC2: "The Moons Masser and Secunda have reappeared in the night sky! The Thalmor of Alinor have taken responsibility for the moons' reppearance, claiming to have leveraged previously undiscovered Dawn Magicks. Regardless of whether their claims are true or not, it's comforting to see the pair in the sky once again."
  voidnights.EVTOPTA2: "What a relief!"
+ almalexia_restoration.EVTNAME1: "The Restoration of Almalexia"
+ almalexia_restoration.EVTDESC1: "After the Sack of Almalexia during the Ascension war, the city has fallen from grace. But now, many years have passed and the city has finally started to recover. People are flocking back to the comforting walls of the city and merchants are setting up shop once more. Almalexia is starting to become a beacon of Dunmer civilization once again!"
+ almalexia_restoration.EVTOPTA1: "Truly a wonderful sight to behold!"
