--- a/localisation/tamriel_countries_l_english.yml
+++ b/localisation/tamriel_countries_l_english.yml
@@ -51,6 +51,8 @@
  XHL_ADJ: "Hlaalu"
  XHM: "Hjaalmarch"
  XHM_ADJ: "Hjaalmarch"
+ XIN: "Indoril"
+ XIN_ADJ: "Indoril"
  XIV: "Ivarstead"
  XIV_ADJ: "Ivarstead"
  XJA: "Jer Ahkrin"
