--- a/localisation/tamriel_misc_l_english.yml
+++ b/localisation/tamriel_misc_l_english.yml
@@ -67,6 +67,7 @@
  ahemmusa: "Ahemmusa"
  zainab: "Zainab"
  erabenimsun: "Erabenimsun"
+ forsworn: "Reachman"
  dwemeri_rg: "Dwarven"
  allmaker: "All-Maker"
  dwemer_reason: "Dwemer Reason"
@@ -180,6 +181,7 @@
  ARCHMAGISTER: "Archmagister"
  ARCHMASTER: "Archmaster"
  GRAND_MAGNATE: "Grand Magnate"
+ GRAND_ASCENDANT: "Grand Ascendant"
  PATRIARCH: "Patriarch"
  MATRIARCH: "Matriarch"
  imperial_city_t: "Imperial City"
