--- a/localisation/tamriel_decisions_l_english.yml
+++ b/localisation/tamriel_decisions_l_english.yml
@@ -37,6 +37,8 @@
  form_anequina_desc: "Unite the Nequin'ali Khajiit of Elsweyr under one banner!"
  form_elsweyr_title: "Form Elswer"
  form_elsweyr_desc: "Unite the Khajiit of Elswer under one banner!"
+ form_indoril_title: "Revive the Great House Indoril"
+ form_indoril_desc: "House Indoril still technically exists, although it is a mere formality compared to the Temple administration itself. However, seeing as we are now stronger than ever before, asserting that we are a free House of our own may be advantageous."
  unify_cyrodiil_invitation_title: "Unify Cyrodiil"
  unify_cyrodiil_invitation_desc: "Invite the independent counties and republics of Cyrodiil to join our legions!"
  join_the_empire_title: "Join the Empire"
