--- a/localisation/tamriel_misc_l_english.yml
+++ b/localisation/tamriel_misc_l_english.yml
@@ -55,7 +55,7 @@
  dunian: "Dunian"
  orcresti: "Orcresti"
  n_xylosian: "Lower Xylosian"
- rimmeni: "Rimmeni"
+ rimmeni: "Samisili"
  corinthian: "Corinthian"
  alabasterian: "Alabasterian"
  xylosian: "Upper Xylosian"
