Ashlander ruler names
^^^^^

--- a/localisation/tamriel_misc_l_english.yml
+++ b/localisation/tamriel_misc_l_english.yml
@@ -128,6 +128,10 @@
  ELSWEYR_CONFEDERACY: "Elsweyr Confederacy"
  tinker_state: "Tinker State"
  tinker_state_ruler: "Tonal Architect"
+ tribal_democracy_ruler_male_ashlander_dunmeri: "Ashkhan"
+ tribal_democracy_ruler_female_ashlander_dunmeri: "Wise Woman"
+ ASHKHAN: "Ashkhan"
+ WISEWOMAN: "Wise Woman"
  helnim: "Helnim"
  balmora: "Balmora"
  ebonheart: "Ebonheart"
