--- a/localisation/tamriel_prov_names_l_english.yml
+++ b/localisation/tamriel_prov_names_l_english.yml
@@ -699,12 +699,12 @@
  PROV_ADJ3033: "Zergonipal"
  PROV_ADJ3034: "Ahemmusa"
  PROV_ADJ3035: "Vos"
- PROV_ADJ3036: "Nchuleft"
+ PROV_ADJ3036: "Zainab"
  PROV_ADJ3037: "Indoranyon"
  PROV_ADJ3038: "Aruhn"
  PROV_ADJ3039: "Sadrith Mora"
  PROV_ADJ3040: "Mzanchend"
- PROV_ADJ3041: "Uvirith's Grave"
+ PROV_ADJ3041: "Erabenimsun"
  PROV_ADJ3042: "Azura"
  PROV_ADJ3043: "Dagoth Ur"
  PROV_ADJ3044: "Molag Amur"
@@ -851,14 +851,14 @@
  PROV_ADJ3185: "Bosojul"
  PROV_ADJ3186: "Helstrom"
  PROV_ADJ3187: "Southern Murkwood"
- PROV_ADJ3188: "Atron Genkan"
+ PROV_ADJ3188: "Atronganka"
  PROV_ADJ3189: "Thormir"
  PROV_ADJ3190: "Reaven"
  PROV_ADJ3191: "Vanyal"
  PROV_ADJ3192: "Martti"
- PROV_ADJ3193: "Nieleon"
+ PROV_ADJ3193: "South Nieleon"
  PROV_ADJ3194: "Narima"
- PROV_ADJ3195: "Karan Genkan"
+ PROV_ADJ3195: "Karanganka"
  PROV_ADJ3196: "Ossasoit"
  PROV_ADJ3197: "Doraku"
  PROV_ADJ3198: "Akashie"
@@ -903,8 +903,8 @@
  PROV_ADJ3237: "Glenbridge"
  PROV_ADJ3238: "Gideon"
  PROV_ADJ3239: "Kixtuku"
- PROV_ADJ3240: "Onyxe"
- PROV_ADJ3241: "Bulwark"
+ PROV_ADJ3240: "Xidyasoto"
+ PROV_ADJ3241: "Onyxe"
  PROV_ADJ3242: "Deepscorn"
  PROV_ADJ3243: "Blueblood"
  PROV_ADJ3244: "Teruma"
@@ -1011,9 +1011,9 @@
  PROV_ADJ3345: "West Leyawiin"
  PROV_ADJ3346: "Telepe"
  PROV_ADJ3347: "Water's Edge"
- PROV_ADJ3348: "Sheggor"
+ PROV_ADJ3348: "Sheogor"
  PROV_ADJ3349: "Nomore"
- PROV_ADJ3350: "Irony"
+ PROV_ADJ3350: "Bawn"
  PROV_ADJ3351: "Arentor"
  PROV_ADJ3352: "High Valus"
  PROV_ADJ3353: "North Valus"
@@ -1370,4 +1370,12 @@
  PROV_ADJ3704: "Colossus Sea"
  PROV_ADJ3705: "Redbridge Coast"
  PROV_ADJ3706: "Mouth of the Xylo"
- 
+ PROV_ADJ3707: "Mulum"
+ PROV_ADJ3708: "Markmont"
+ PROV_ADJ3709: "Xthala"
+ PROV_ADJ3710: "North Nieleon"
+ PROV_ADJ3711: "K'tsruma"
+ PROV_ADJ3712: "Ksefrod"
+ PROV_ADJ3713: "Bulwark"
+ PROV_ADJ3714: "Blankenmarch"
+ PROV_ADJ3715: "Border Watch"
