--- a/localisation/tamriel_misc_l_english.yml
+++ b/localisation/tamriel_misc_l_english.yml
@@ -188,6 +188,10 @@
  GRAND_ASCENDANT: "Grand Ascendant"
  PATRIARCH: "Patriarch"
  MATRIARCH: "Matriarch"
+ ARGONIAN_TRIBAL_PROVINCE: "Tribal Province"
+ SAP_SPEAKER: "Sap-Speaker"
+ HIGH_SAP_SPEAKER: "High Sap-Speaker"
+ LORD_SAP_SPEAKER: "Master Sap-Speaker"
  imperial_city_t: "Imperial City"
  leyawiin_t: "Nibenay"
  cheydinhal_t: "Cheydinhal"
