--- a/localisation/tamriel_misc_l_english.yml
+++ b/localisation/tamriel_misc_l_english.yml
@@ -189,6 +189,7 @@
  PATRIARCH: "Patriarch"
  MATRIARCH: "Matriarch"
  ARGONIAN_TRIBAL_PROVINCE: "Tribal Province"
+ ARGONIAN_REFORMED_PROVINCE: "Reformed Tribal Province"
  SAP_SPEAKER: "Sap-Speaker"
  HIGH_SAP_SPEAKER: "High Sap-Speaker"
  LORD_SAP_SPEAKER: "Master Sap-Speaker"
