--- a/localisation/tamriel_prov_names_l_english.yml
+++ b/localisation/tamriel_prov_names_l_english.yml
@@ -106,7 +106,7 @@
  PROV3130: "Khaminar"
  PROV3131: "Markhalt"
  PROV3132: "Corkarth"
- PROV3133: "North Dres"
+ PROV3133: "Silvenar"
  PROV3134: "Nuhyas Point"
  PROV3135: "North Hidoran"
  PROV3136: "Kaguthri"
@@ -689,6 +689,17 @@
  PROV3713: "Bulwark"
  PROV3714: "Blankenmarch"
  PROV3715: "Border Watch"
+ PROV3716: "Esaren"
+ PROV3717: "Horak"
+ PROV3718: "Lhendal"
+ PROV3719: "Hairab"
+ PROV3720: "Lake Fjalding"
+ PROV3721: "Lake Canulus"
+ PROV3722: "Lake Mackamen"
+ PROV3723: "Lake Arrius"
+ PROV3724: "Lake Poppad"
+ PROV3725: "Priory Lake"
+ PROV3726: "Malacath's Lake"
  PROV_ADJ3026: "Tamriel"
  PROV_ADJ3027: "Far Sheogorad"
  PROV_ADJ3028: "Ald Daedroth"
@@ -796,7 +807,7 @@
  PROV_ADJ3130: "Khaminar"
  PROV_ADJ3131: "Markhalt"
  PROV_ADJ3132: "Corkarth"
- PROV_ADJ3133: "North Dres"
+ PROV_ADJ3133: "Silvenar"
  PROV_ADJ3134: "Nuhyas Point"
  PROV_ADJ3135: "North Hidoran"
  PROV_ADJ3136: "Kaguthri"
